updated with br

--- a/Assignment3/foundItems.html
+++ b/Assignment3/foundItems.html
@@ -2,9 +2,9 @@
 
 <ol>
   <li ng-repeat="item in menu.items">
-   ItemName:  {{ item.name }}
-    Description: {{item.description}}
-    Short Name: {{item.short_name}}
+   ItemName:  {{ item.name }}<br>
+    Description: {{item.description}}<br>
+    Short Name: {{item.short_name}}<br>
     <button ng-click="menu.onRemove({index: $index});"> Don't want this one!</button>
   </li>
 </ol>
