--- a/Assignment4/index.html
+++ b/Assignment4/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html ng-app='ShoppingList'>
+<html ng-app='MenuApp'>
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/styles.css">
-    <title>No Cookie Shopping List</title>
+    <title>Menu App</title>
   </head>
   <body>
-    <h1>Welcome to Premade No Cookie Shopping List</h1>
+    <h1>Welcome to Menu List</h1>
 
     <ui-view></ui-view>
 
@@ -15,16 +15,25 @@
     <script src="lib/angular-ui-router.min.js"></script>
 
     <!-- Modules -->
-    <script src="src/shoppinglist/shoppinglist.module.js"></script>
+    <script src="src/menulist/menuapp.module.js"></script>
+    <!-- <script src="src/shoppinglist/shoppinglist.module.js"></script> -->
 
     <!-- Routes -->
     <script src="src/routes.js"></script>
 
     <!-- 'ShoppingList' module artifacts -->
-    <script src="src/shoppinglist/shoppinglist.component.js"></script>
+    
+
+    <script src="src/menulist/categorieslist.component.js"></script>
+    <script src="src/menulist/mainmenulist.controller.js"></script>
+    <script src="src/menulist/menudata.service.js"></script>
+    <script src="src/menulist/itemdetail.component.js"></script>
+    <script src="src/menulist/item-detail.controller.js"></script>
+
+    <!-- <script src="src/shoppinglist/shoppinglist.component.js"></script>
     <script src="src/shoppinglist/main-shoppinglist.controller.js"></script>
     <script src="src/shoppinglist/shoppinglist.service.js"></script>
-    <script src="src/shoppinglist/item-detail.controller.js"></script>
+    <script src="src/shoppinglist/item-detail.controller.js"></script> -->
 
   </body>
 </html>
