--- a/Assignment5/index.html
+++ b/Assignment5/index.html
@@ -51,13 +51,13 @@
                 <a ui-sref="public.menu">
                   <span class="glyphicon glyphicon-cutlery"></span><br class="hidden-xs"> Menu</a>
               </li>
-              <li>
-                <a href="#">
-                  <span class="glyphicon glyphicon-info-sign"></span><br class="hidden-xs"> About</a>
+              <li id="navMenuButton" ui-sref-active="active">
+                <a ui-sref="public.myinfo">
+                  <span class="glyphicon glyphicon-info-sign"></span><br class="hidden-xs"> MyInfo</a>
               </li>
-              <li>
-                <a href="#">
-                  <span class="glyphicon glyphicon-certificate"></span><br class="hidden-xs"> Awards</a>
+              <li id="navMenuButton" ui-sref-active="active">
+                <a ui-sref="public.signup">
+                  <span class="glyphicon glyphicon-certificate"></span><br class="hidden-xs"> Signup</a>
               </li>
               <li id="phone" class="hidden-xs">
                 <a href="tel:410-602-5008">
@@ -131,6 +131,9 @@
     <!-- Public Module -->
     <script src="src/public/public.module.js"></script>
     <script src="src/public/public.routes.js"></script>
+    <script src="src/public/signup/signup.controller.js"></script>
+    <script src="src/public/myinfo/myinfo.controller.js"></script>
+    <script src="src/public/services/signup-user.service.js"></script>
     <script src="src/public/menu/menu.controller.js"></script>
     <script src="src/public/menu-category/menu-category.component.js"></script>
     <script src="src/public/menu-items/menu-items.controller.js"></script>
